--- a/ch03/censorify/package.json
+++ b/ch03/censorify/package.json
@@ -4,6 +4,10 @@
 	"version" : "0.1.1",
 	"description" : "Censors words out of text",
 	"main" : "censortext",
+	"repository":{
+		"type" : "git",
+		"url" : "https://github.com/albertcarrete/NodeBook/tree/master/ch03/censorify"
+		},
 	"dependencies" : {},
 	"engines":{
 		"node":"*"
